Add the ProtocolSideChannel abstraction
ProtocolSideChannel makes it possible to implement STOMP on top of e.g. WebSockets
and still take care of Ping/Pong messages (or other similar mechanisms).

Users need to provide a ProtocolSideChannel type when implementing Transport.
The simplest ProtocolSideChannel is Unit "()".

This commit also introduces the necessary plumbing for ProtocolSideChannel to work:
ReadResponse, Response, WriteError, and ReadError.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ edition = "2024"
 bytes = "1.11.0"
 custom_debug_derive = "0.6.2"
 anyhow = "1.0.100"
+thiserror = "2.0.17"
 winnow = "0.7.14"
 async-trait = "0.1.89"
